# libxmlplusplus

./: Makefile.am  meson.build
MSVC_NMake/: build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  generate-msvc.mak
examples/: meson.build
